fixed avatar getting squished

--- a/src/assets/css/profile.css
+++ b/src/assets/css/profile.css
@@ -128,16 +128,16 @@
     text-align: center;
     font-weight: bold;
     font-style: normal;
-
 }
 
-
-/*.tags-wrapper {
-    background-color: var(--bg-light);
-    padding: 1.2em 18%;
-    border-radius: 10px;
-    align-items: center;
-}*/
+.profile .user-id{
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    color: var(--white);
+    cursor: pointer;
+    border: 1.5em solid transparent;
+}
 
 .tags-wrapper {
     margin-top: -1em;
@@ -232,15 +232,7 @@
     background-color: rgb(51, 168, 49);
 }
 
-.profile .user-id{
-    text-align: center;
-    vertical-align: middle;
-    position: relative;
-    color: var(--white);
-    margin-top: 1em;
-    cursor: pointer;
-    border: 1.5em solid transparent;
-}
+
 
 @media (max-width: 820px) {
     .profile{
